src/web/src/components/mapComponent/mapComponent.module.css
/**
 * Copyright (c) 2023 Rafael F. Meneses
 * 
 * This software is released under the MIT License.
 * https://opensource.org/licenses/MIT
 */
@import url("variables.css");

.map_div {
    width: 100%;
    height: 100%;
    position: relative;
}

.target_svg {
    position: absolute;
    top: 0;
    display: flex;
    width: 100%;
    height: 100%;
    z-index: 1;
    pointer-events: none;
    stroke: rgb(64, 255, 0);
    stroke-width: 1;
}

